--- a/style.css
+++ b/style.css
@@ -9,5 +9,10 @@ body{
     text-align: center;
 }
 #text1{
+    margin-top: 300px;
     text-align: center;
+}
+.Copy{
+    text-align: right;
+    margin-top: 350px;
 }
