--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ body{
     text-align: right;
     margin-top: 350px;
 }
+.text1{
+    text-align: right;
+    color: cornflowerblue;
+}
+.Copy{
+
+}
