--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body{
     color: red;
     margin-top: 200px;
 }
+.text2{
+    text-align: center;
+    color: red;
+}
 .Copy{
 color: red;
 font-size: 10px;
